static/css/audio.css
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh;
    height: 100dvh;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #000;
    color: #eee;
    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
    -webkit-tap-highlight-color: transparent;
    -webkit-user-select: none;
    user-select: none;
}
.audio-player {
    max-width: 500px;
    width: 90vw;
    background: rgba(255, 255, 255, 0.1);
    border-radius: 20px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
    padding: 12px;
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    align-items: center;
}
img {
    pointer-events: none;
}
.player-header {
    display: flex;
    align-items: center;
    width: 100%;
    margin-bottom: 8px;
    user-select: text;
    -webkit-user-select: text;
}
.player-title {
    margin: auto;
    margin-top: 6px;
    margin-bottom: 36px;
    text-align: center;
    font-size: 24px;
    font-weight: 600;
    color: #eee;
    word-break: break-all;
}
.time-bar {
    display: flex;
    width: 100%;
    align-items: center;
}
.duration {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    width: calc((100% - 64px));
    height: 10px;
    background: #62626274;
    cursor: pointer;
    border-radius: 4px;
    margin-top: 1px;
}
/* This weird shit is only to let the */
/* user select easily the start and end */
/* and also try to fix one bug */
.duration::before {
    position: absolute;
    content: "\00a0";
    height: 100%;
    left: -48px;
    width: calc((100% + 98px));
    height: 150%;
    top: -25%;
}
.hover-time {
    overflow: show;
    height: 100%;
    position: absolute;
    inset: 0;
    background: #ffffff9a;
    display: flex;
    align-items: center;
    width: 0;
    border-radius: 5px;
    z-index: -1;
}
.hover-time .hover-duration {
    position: absolute;
    font-size: 0.7rem;
    visibility: hidden;
    font-weight: bold;
    pointer-events: none;
}
.duration .current-time {
    inset: 0;
    width: 0;
    height: 100%;
    display: flex;
    position: absolute;
    background: #ff4a10;
    align-items: center;
    border-radius: 5px;
}
.current-time::before {
    z-index: 9;
    opacity: 0;
    content: "";
    width: 14px;
    height: 14px;
    position: absolute;
    right: calc((-14px / 2));
    background: #ff6a00;
    border-radius: 50%;
    transition: all 0.2s;
    transform: scale(0);
}
.duration:hover .current-time::before {
    opacity: 1;
    transform: scale(1);
}

#current-time {
    font-size: 0.75rem;
    margin-left: 8px;
    margin-right: 12px;
    font-family: monospace;
}
#total-time {
    font-size: 0.75rem;
    margin-left: 8px;
    margin-right: 12px;
    font-family: monospace;
}

.playback-controls {
    margin-top: 20px;
    margin-bottom: 16px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.controls {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.volume-control {
    width: 90%;
    display: flex;
    align-items: center;
    gap: 8px;
    padding-right: 4%;
}
.vol-icons {
    position: relative;
    width: 24px;
    height: 24px;
}
.icon-vol {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    width: 100%;
    height: 100%;
    cursor: pointer;
    filter: invert(0.9);
}
.vol-high {
    display: block;
}
#vol-icon {
    width: 24px;
    height: 24px;
    cursor: pointer;
}
#volume-bar {
    flex: 1;
    -webkit-appearance: none;
    appearance: none;
    height: 4px;
    background: #e1e1e1;
    border-radius: 2px;
    outline: none;
    cursor: pointer;
    background: linear-gradient(to right, #007aff 100%, #e1e1e1 0%);
}
#volume-bar::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background: #007aff;
}
#volume-bar::-moz-range-thumb {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background: #007aff;
}
.extra-controls {
    width: 100%;
    margin-top: 24px;
    display: flex;
    align-items: space-between;
    justify-content: space-around;
}
.extra-controls button {
    padding: 0;
    margin: 0;
    border: none;
    height: 100%;
    background: none;
    cursor: pointer;
}
#speed-btn {
    background: none;
    border: none;
    cursor: pointer;
    font-size: 18px;
    color: #0a84ff;
    transition: all 0.1s;
}
#speed-btn:hover {
    color: #aad4ff;
}
.control-btn {
    border: none;
    background: #def3;
    cursor: pointer;
    padding: 6px;
    border-radius: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.1s;
}
.control-btn img {
    filter: invert(1);
}
.control-btn:hover {
    background: #def6;
}
.control-btn img {
    width: 24px;
    height: 24px;
}
.nav-btn {
    background: none;
    border: none;
    cursor: pointer;
}
.nav-btn img {
    width: 40px;
    height: 40px;
}
.icon-menu {
    width: 30px;
    height: 30px;
}

/* RESPONSIVE  ZONE */

@media (max-width: 300px) {
    .round-button {
        display: none;
    }
    .audio-container {
        background: none;
        padding: 0px;
        border: none;
    }
}
@media (max-width: 250px) {
    .volume-control {
        display: none;
    }
    .extra-controls {
        display: none;
    }
    .audio-player {
        padding: 8px;
    }
    .nav-btn {
        font-size: 0.75rem;
    }
    .control-btn {
        padding: 5px;
    }
    .control-btn img {
        width: 24px;
        height: 24px;
    }
    .player-title {
        margin-top: 12px;
        margin-bottom: 16px;
        font-size: 20px;
    }
}
@media (max-width: 160px) {
    .nav-btn {
        display: none;
    }
    .playback-controls {
        align-items: center;
        justify-content: center;
    }
    span {
        display: none;
    }
}
@media (max-width: 120px) {
    .audio-player {
        display: none;
    }
}

@media (max-height: 280px) {
    .volume-control {
        display: none;
    }
    .extra-controls {
        display: none;
    }
}
@media (max-height: 190px) {
    .time-bar {
        display: none;
    }
    .player-header {
        display: none;
    }
    .playback-controls {
        margin: 0;
    }
}
@media (max-height: 110px) {
    .audio-player {
        display: none;
    }
}

